delete portfolio page arrow btn

--- a/portfolio.html
+++ b/portfolio.html
@@ -135,7 +135,7 @@ z-index:100;
 opacity:1;
 }*/
 </style>
-  </div><a href="#section01" data-w-id="06cd405c-0817-37d7-3ed8-19805f449340" class="link-block w-inline-block"></a>
+  </div>
   <div class="nav div-block-7"><a href="index.html" class="logo w-inline-block"><img src="images/Logo.svg" height="24" width="24" alt=""></a><a data-w-id="f0aff78f-2e6b-3aee-153f-bfebda7071a3" href="#" class="menu w-inline-block"><img src="images/Menu.svg" width="24" height="24" alt=""></a>
     <div data-w-id="cfb793e2-59be-46ad-fd28-ab9ab48e7e54" class="link_box">
       <div class="nav_content"><a data-w-id="0c208bd4-e53b-dbe3-651d-eadc079848f0" href="#" class="link-block-4 w-inline-block"><img src="images/X.svg" width="24" height="24" alt="" class="image-7"></a>
