motion project open in new tab

--- a/workdetail-resistance.html
+++ b/workdetail-resistance.html
@@ -162,7 +162,7 @@ opacity:1;
     <div id="section02" class="section w_section">
       <div class="flex f_02 work_flex">
         <div class="container w_1_container w-container">
-          <p class="paragraph-4">惡靈古堡：反抗是一款一對四非對稱對抗遊戲，四位生存者必須一同合作闖關，抵抗首腦不下的層層陷阱，通關獲得勝利。四位生存者各有補師、坦克、駭客與近戰等天賦，在關卡中透過各自的能力協助彼此，抵抗來自首腦的攻擊。而首腦則運用第一人稱的上帝視角，在關卡中設置各式各樣的機關與殭屍、附身到魔王殭屍，阻擋生存者在時間內完成通關。<strong class="bold-text-4"></strong></p>
+          <p class="paragraph-4">惡靈古堡：反抗是一款一對四非對稱對抗遊戲，四位生存者必須一同合作闖關，抵抗首腦部下的層層陷阱，通關獲得勝利。四位生存者各有補師、坦克、駭客與近戰等天賦，在關卡中透過各自的能力協助彼此，抵抗來自首腦的攻擊。而首腦則運用第一人稱的上帝視角，在關卡中設置各式各樣的機關與殭屍、附身到魔王殭屍，阻擋生存者在時間內完成通關。<strong class="bold-text-4"></strong></p>
         </div>
       </div>
     </div>
