--- a/portfolio.html
+++ b/portfolio.html
@@ -217,7 +217,7 @@ opacity:1;
                     </a>
                   </div>
                   <div class="column-5 w-col w-col-6">
-                    <a data-w-id="530def0f-663a-0aa0-6d21-2c86e1f5b422" href="https://www.youtube.com/watch?v=p2XaqhYRBQs" class="link-block-2 w-inline-block">
+                    <a data-w-id="530def0f-663a-0aa0-6d21-2c86e1f5b422" href="https://www.youtube.com/watch?v=p2XaqhYRBQs" target="_blank" class="link-block-2 w-inline-block">
                       <div class="div-block-6"><img src="images/Group-258.png" srcset="images/Group-258-p-500.png 500w, images/Group-258.png 600w" sizes="(max-width: 479px) 87vw, (max-width: 767px) 59vw, (max-width: 991px) 27vw, 275.1875px" alt="" class="image-4"></div>
                       <div class="text-block-11">Floating Phone</div>
                       <p class="paragraph-3">做開心的</p>
@@ -233,7 +233,7 @@ opacity:1;
                     </a>
                   </div>
                   <div class="column-5 w-col w-col-6">
-                    <a data-w-id="4811cc90-7b23-57d4-d12a-42cf62388fd6" href="https://www.youtube.com/watch?v=xk-JF3MAzfA" class="link-block-2 w-inline-block">
+                    <a data-w-id="4811cc90-7b23-57d4-d12a-42cf62388fd6" href="https://www.youtube.com/watch?v=xk-JF3MAzfA" target="_blank" class="link-block-2 w-inline-block">
                       <div class="div-block-6"><img src="images/Group-2611110.png" srcset="images/Group-2611110-p-500.png 500w, images/Group-2611110.png 600w" sizes="(max-width: 479px) 87vw, (max-width: 767px) 59vw, (max-width: 991px) 27vw, 275.1875px" alt="" class="image-4"></div>
                       <div class="text-block-11">吃貨人生</div>
                       <p class="paragraph-3">敢不敢點開</p>
