--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ opacity:1;
                   <div class="text-block-20">UI / UX Design Intern</div>
                 </div>
                 <div class="w-col w-col-6">
-                  <div class="text-block-7">2018/07 - 2019/07</div>
+                  <div class="text-block-7">&zwj;2018/07 - 2019/07</div>
                 </div>
               </div>
               <div class="text-block-8">規劃與建置設計語言系統。設計資訊圖表。依照公司需求，獨立完成UI/UX工作職務。<br></div>
@@ -236,7 +236,7 @@ opacity:1;
                   <div>UX Design Intern</div>
                 </div>
                 <div class="w-col w-col-6">
-                  <div class="text-block-7">2018/08 - 2019/05</div>
+                  <div class="text-block-7">&zwj;2018/08 - 2019/05</div>
                 </div>
               </div>
               <div class="text-block-8">負責【惡靈古堡：反抗】<em class="italic-text">的Mainflow與介面，撰寫界面相關規格，製作遊戲高保真原型。</em></div>
@@ -250,7 +250,7 @@ opacity:1;
                   <div>UI / UX Design Intern</div>
                 </div>
                 <div class="w-col w-col-6">
-                  <div class="text-block-7">2018/01 - 2018/05</div>
+                  <div class="text-block-7">&zwj;2018/01 - 2018/05</div>
                 </div>
               </div>
               <div class="text-block-8">建置UI軟體設計規範，專寫規範規格。參與質性調研，撰寫訪綱，執行用戶訪談。優化產品流程。</div>
@@ -262,7 +262,7 @@ opacity:1;
                   <div>UX Design Intern</div>
                 </div>
                 <div class="w-col w-col-6">
-                  <div class="text-block-7">2017/07 - 2017/8</div>
+                  <div class="text-block-7">&zwj;2017/07 - 2017/8</div>
                 </div>
               </div>
               <div class="text-block-8">設計Enterprise產品的入門導覽流程與介面，協助研究成員執行訪談與收斂問題原者。</div>
@@ -276,7 +276,7 @@ opacity:1;
                   <div>影音剪輯工讀</div>
                 </div>
                 <div class="w-col w-col-6">
-                  <div class="text-block-7">2017/02 - 2017/06</div>
+                  <div class="text-block-7">&zwj;2017/02 - 2017/06</div>
                 </div>
               </div>
               <div class="text-block-8">製作粉專影片，並加入動態設計元素。建置影片剪輯規範。</div>
@@ -288,7 +288,7 @@ opacity:1;
                   <div>影音剪輯工讀</div>
                 </div>
                 <div class="w-col w-col-6">
-                  <div class="text-block-7">2016/10 - 2017/01</div>
+                  <div class="text-block-7">&zwj;2016/10 - 2017/01</div>
                 </div>
               </div>
               <div class="text-block-8">剪輯網紅工商的宣傳影片，設計各式動態影片開頭。</div>
