work date in meta

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/fullpage.js/dist/fullpage.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <meta name="format-detection" content="telephone=no">
 </head>
 <body>
   <div class="div-block-10 div-block-11">
